Fixed some spacing issues in the hearder. Updated colors.

--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -1,5 +1,5 @@
-$black: #1a1a1a;
-$white: #e6e6e6;
+$black: #111111;
+$white: #fefefe;
 $gray-dark: #4d4d4f;
 $blue: #005570;
 $orange: #ff6c00;
