--- a/sass/theme/header.scss
+++ b/sass/theme/header.scss
@@ -5,7 +5,7 @@ body:not(.home) {
 body.home {
   &.custom-background {
     background-position: top center;
-    background-size: 100% 450px;
+    background-size: auto 450px;
     background-attachment: inherit;
     background-repeat: no-repeat;
   }
@@ -101,8 +101,8 @@ body.home {
     border: 0;
 
     a {
-      padding-top: 5px;
-      padding-bottom: 5px;
+      padding-top: 0.25rem;
+      padding-bottom: 0.25rem;
     }
 
     &:last-child {
@@ -111,6 +111,11 @@ body.home {
 
     @include media-breakpoint-up(lg) {
       border-right: 1px solid $orange;
+
+      a {
+        padding-top: 0;
+        padding-bottom: 0;
+      }
     }
 
     .dropdown-menu {
